--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url(/vendor/normalize.css);
 @import url(/blocks/header.css);
 @import url(/blocks/intro.css);
 @import url(/blocks/photo-grid.css);
@@ -5,242 +6,5 @@
 @import url(/blocks/cover.css);
 @import url(/blocks/footer.css);
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Inter';
-  color: #FFFFFF;
 
-}
 
-body {
-  background-color: #2A2C2F;
-}
-
-.page {
-  max-width: 1280px;
-  margin:0 auto;
-}
-
-@media screen and (max-width: 800px) {
-  .intro {
-    max-width: 100%;
-    margin: 0 24px;
-  }
-
-  .photo-grid {
-    margin: 0 16px;
-    height: auto;
-    margin-bottom: 92px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-gap: 16px;
-  }
-
-.photo-grid__img {
-    width: 100%;
-  }
-
-.place__container {
-    padding: 0 16px;
-  }
-
-.place__card {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    gap: 0 28px;
-  }
-
-.place__title {
-    font-size: 42px;
-    font-weight: 900;
-    line-height: 46px;
-  }
-
-.place__artist-name {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-    text-align: left;
-  }
-
-.place__paragraph {
-    font-size: 16px;
-    line-height: 26px;
-    margin-bottom: 31px;
-  }
-
-.cover__container {
-    position: relative;
-    display: inline-block;
-    margin: 0px 0px 82px 0px;
-  }
-
-.line-breaker {
-    display: inline;
-    background: rgba(255, 255, 255, 0.0);
-  }
-}
-
-@media screen and (max-width: 750px) {
-.place__link {
-    width: 280px;
-    font-size: 14px;
-    font-weight: 600;
-    background-color: #0278FE;
-    border-radius: 4px;
-    padding: 10px 10px 10px 10px;
-    margin-bottom: 105px;
-    text-align: center;
-    text-decoration: none;
-  }
-}
-
-@media screen and (max-width: 630px) {
-    .header__logo {
-    width: 200px;
-    height: 51px;
-    margin-bottom: 50px;
-  }
-
-.header__title {
-    width: 288px;
-    font-size: 40px;
-    line-height: 44px;
-    margin-bottom: 60px;
-  }
-
-    .header__subtitle {
-    font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 40px;
-}
-
-.intro {
-    max-width: 100%;
-    margin: 0 16px;
-  }
-
-.intro__title {
-    font-size: 32px;
-    line-height: 35px;
-    margin-bottom: 54px;
-  }
-
-.intro__subtitle {
-    width: 736px;
-    font-size: 24px;
-    line-height: 30px;
-    margin-bottom: 55px;
-  }
-
-.intro__author {
-
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 34px;
-    margin-bottom: 18px;
-  }
-
-.intro__text {
-    font-size: 16px;
-    line-height: 26px;
-    margin-bottom: 38px;
-  }
-
-.photo-grid {
-    margin: 0 16px;
-    height: auto;
-    margin-bottom: 92px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-gap: 16px;
-  }
-
-.photo-grid__img {
-    width: 100%;
-  }
-
-.place__container {
-    padding: 0px;
-  }
-
-.place__card {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    gap: 0 28px;
-  }
-
-.place__title {
-    margin: 0 16px;
-    font-size: 32px;
-    font-weight: 900;
-    line-height: 35px;
-    margin-bottom: 30px;
-  }
-
-.place__image {
-    width: 600px;
-    height: auto;
-    margin: 0px auto 30px;
-  }
-
-.place__artist {
-    margin: 0 16px 8px 16px;
-  }
-
-.place__artist-name {
-    margin: 0 16px 30px 16px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-    text-align: left;
-  }
-
-.place__artist-name_no-margin-bottom {
-    margin-bottom: 0px;
-  }
-
-.place__paragraph {
-    padding: 0 16px;
-    margin: 0 auto 8px auto;
-  }
-
-.place__paragraph_small-space {
-    margin-bottom: 22px;
-  }
-
-.place__link {
-    margin: 0 auto;
-    width: 290px;
-    font-size: 14px;
-    font-weight: 600;
-    background-color: #0278FE;
-    border-radius: 4px;
-    padding: 15px 21px 15px 21px;
-    margin-bottom: 105px;
-    text-align: center;
-    text-decoration: none;
-  }
-
-.cover__title {
-    font-size: 32px;
-    line-height: 35px;
-    margin-bottom: 16px;
-  }
-
-.cover__text {
-    font-size: 14px;
-    line-height: 16px;
-    margin-bottom: 16px;
-  }
-
-.cover__container {
-    margin: 0px 0px 64px 0px;
-  }
-}
