--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,8 +1,7 @@
 .header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin: 34px auto 0;
+  margin-top: 34px;
   align-items: center;
 }
 
@@ -37,4 +36,23 @@
   height: auto;
   filter: grayscale(100%);
   margin-bottom: 92px;
+}
+
+@media screen and (max-width: 630px) {
+  .header__logo {
+    margin-bottom: 50px;
+  }
+
+  .header__title {
+    max-width: 100%;
+    font-size: 40px;
+    line-height: 44px;
+    margin-bottom: 60px;
+  }
+
+  .header__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 40px;
+  }
 }
