--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -43,3 +43,43 @@
   text-align: left;
   margin-bottom: 92px;
 }
+@media screen and (max-width: 1024px) {
+  .intro {
+    max-width: 100%;
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .intro {
+    max-width: 100%;
+    margin: 0 16px;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+    margin-bottom: 54px;
+  }
+
+  .intro__subtitle {
+    width: 736px;
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 55px;
+  }
+
+  .intro__author {
+
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 34px;
+    margin-bottom: 18px;
+  }
+
+  .intro__text {
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 38px;
+  }
+}
