--- a/blocks/photo-grid.css
+++ b/blocks/photo-grid.css
@@ -1,15 +1,51 @@
 .photo-grid {
   max-width: 100%;
   height: auto;
-  margin: 0 48px 92px;
+  margin: 0 48px 92px 48px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-gap: 16px;
 }
 
+.photo-grid__item {
+  list-style-type: none;
+}
+
 .photo-grid__img {
   width: 100%;
   max-width: 100%;
   height: auto;
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    margin: 0 16px;
+    height: auto;
+    margin-bottom: 92px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 16px;
+  }
+
+  .photo-grid__img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .photo-grid {
+    margin: 0 16px;
+    height: auto;
+    margin-bottom: 92px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 16px;
+  }
+
+  .photo-grid__img {
+    width: 100%;
+  }
 }
