--- a/blocks/place.css
+++ b/blocks/place.css
@@ -81,3 +81,114 @@
   cursor: pointer;
   background-color: #0063D2;
 }
+
+@media screen and (max-width: 1024px) {
+  .place__container {
+    padding: 0 16px;
+  }
+
+  .place__card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: 0 28px;
+  }
+
+  .place__title {
+    font-size: 42px;
+    font-weight: 900;
+    line-height: 46px;
+  }
+
+  .place__artist-name {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+  }
+
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 31px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .place__link {
+    width: 280px;
+    font-size: 14px;
+    font-weight: 600;
+    background-color: #0278FE;
+    border-radius: 4px;
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 105px;
+    text-align: center;
+    text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .place__container {
+    padding: 0px;
+  }
+
+  .place__card {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: 0 28px;
+  }
+
+  .place__title {
+    margin: 0 16px;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 35px;
+    margin-bottom: 30px;
+  }
+
+  .place__image {
+    width: 600px;
+    height: auto;
+    margin: 0px auto 30px;
+  }
+
+  .place__artist {
+    margin: 0 16px 8px 16px;
+  }
+
+  .place__artist-name {
+    margin: 0 16px 30px 16px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+  }
+
+  .place__artist-name_no-margin-bottom {
+    margin-bottom: 0px;
+  }
+
+  .place__paragraph {
+    padding: 0 16px;
+    margin: 0 auto 8px auto;
+  }
+
+  .place__paragraph_small-space {
+    margin-bottom: 22px;
+  }
+
+  .place__link {
+    margin: 0 auto;
+    width: 290px;
+    font-size: 14px;
+    font-weight: 600;
+    background-color: #0278FE;
+    border-radius: 4px;
+    padding: 15px 21px 15px 21px;
+    margin-bottom: 105px;
+    text-align: center;
+    text-decoration: none;
+  }
+}
