--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,11 @@
-@import url(/vendor/normalize.css);
-@import url(/blocks/page.css);
-@import url(/blocks/header.css);
-@import url(/blocks/intro.css);
-@import url(/blocks/photo-grid.css);
-@import url(/blocks/place.css);
-@import url(/blocks/cover.css);
-@import url(/blocks/footer.css);
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/intro.css);
+@import url(../blocks/photo-grid.css);
+@import url(../blocks/place.css);
+@import url(../blocks/cover.css);
+@import url(../blocks/footer.css);
 
 
 
